# aim-node

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.aim-node.yml  entrypoint.sh  install.ps1  install.sh  pyproject.toml
.github/workflows/: docker-build.yml  smoke-tests.yml  tests.yml
aim_node/: __init__.py  cli.py  config_loader.py
aim_node/consumer/: __init__.py  proxy.py  session_manager.py
aim_node/core/: __init__.py  auth.py  config.py  connectivity_token.py  crypto.py  handshake.py  logging.py  market_client.py  offline_queue.py  relay_crypto.py  trust_channel.py
aim_node/management/: allai.py  app.py  config_writer.py  errors.py  facade.py  logs.py  marketplace.py  metrics.py  middleware.py  process.py  routes.py  schemas.py  state.py  tools.py
aim_node/provider/: __init__.py  adapter.py  session_handler.py
aim_node/relay/: __init__.py  protocol.py  (+1 more)
docs/: DEVELOPMENT.md  openapi-backend-gaps.yaml  openapi-facade.yaml
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vite.config.ts
scripts/: release.sh
specs/: BQ-AIM-NODE-ALLAI-COPILOT-GATE1.md  BQ-AIM-NODE-BUYER-MODE-GATE1.md  BQ-AIM-NODE-CONTRACTS-GATE1.md  BQ-AIM-NODE-CONTRACTS-GATE2.md  BQ-AIM-NODE-DASHBOARD-GATE1.md  BQ-AIM-NODE-DASHBOARD-GATE2.md  BQ-AIM-NODE-DIST-GATE1.md  BQ-AIM-NODE-DIST-GATE2-SLICE2.md  BQ-AIM-NODE-DIST-GATE2.md  BQ-AIM-NODE-EARNINGS-GATE1.md  BQ-AIM-NODE-LOGS-DIAGNOSTICS-GATE1.md  BQ-AIM-NODE-MGMT-API-V2-GATE1.md  BQ-AIM-NODE-MGMT-API-V2-GATE2.md  BQ-AIM-NODE-SELLER-PUBLISH-GATE1.md  BQ-AIM-NODE-SELLER-PUBLISH-GATE2.md  BQ-AIM-NODE-SETUP-WIZARD-GATE1.md  BQ-AIM-NODE-SETUP-WIZARD-GATE2.md  BQ-AIM-NODE-UI-SCAFFOLD-GATE1.md  BQ-AIM-NODE-UI-SCAFFOLD-GATE2.md
tests/: __init__.py  conftest.py  test_cli.py  test_consumer.py  test_core.py  test_errors.py  test_facade.py  test_handshake.py  test_integration.py  test_logs.py  test_management_allai.py  test_management_api.py  test_management_state.py  test_marketplace_routes.py  test_metrics.py  test_middleware.py  test_provider.py  test_relay_crypto.py  test_slice2.py  test_tools.py  test_wire_protocol.py
(+117 files in other folders)
