[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aim-node"
version = "0.1.0"
description = "AIM node core bootstrap package"
requires-python = ">=3.11"
dependencies = [
    "cryptography",
    "websockets",
    "httpx",
    "starlette",
    "uvicorn",
    "click",
    "tomli",
    "pydantic",
]

[project.optional-dependencies]
management = ["tomli_w>=1.0"]
test = [
    "pytest",
    "pytest-asyncio>=0.23",
    "httpx",
]
dev = [
    "pytest",
    "pytest-asyncio>=0.23",
]

[project.scripts]
aim-node = "aim_node.cli:main"

[tool.setuptools.packages.find]
include = ["aim_node*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.pytest-asyncio]
loop_scope = "session"
